--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.4.3
 attrs==19.3.0
 Automat==0.8.0
 awscli==1.18.183
@@ -24,6 +25,9 @@ distro-info===0.23ubuntu1
 docutils==0.15.2
 entrypoints==0.3
 Flask==1.1.2
+Flask-Migrate==2.5.3
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.4
 gunicorn==20.0.4
 httplib2==0.14.0
 hyperlink==19.0.0
@@ -50,6 +54,7 @@ launchpadlib==1.10.13
 lazr.restfulclient==0.14.2
 lazr.uri==1.0.3
 macaroonbakery==1.3.1
+Mako==1.1.3
 MarkupSafe==1.1.0
 matplotlib==3.3.3
 more-itertools==4.2.0
@@ -65,6 +70,7 @@ Pillow==8.0.1
 pluggy==0.13.1
 prompt-toolkit==3.0.8
 protobuf==3.6.1
+psycopg2-binary==2.8.6
 py==1.9.0
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
@@ -85,6 +91,7 @@ pytest==6.1.2
 python-apt==2.0.0+ubuntu0.20.4.1
 python-dateutil==2.8.1
 python-debian===0.1.36ubuntu1
+python-editor==1.0.4
 pytz==2020.4
 PyYAML==5.3.1
 pyzmq==19.0.2
@@ -97,6 +104,7 @@ service-identity==18.1.0
 simplejson==3.16.0
 six==1.14.0
 sos==4.0
+SQLAlchemy==1.3.20
 ssh-import-id==5.10
 systemd-python==234
 toml==0.10.2
