--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ MarkupSafe==1.1.0
 psycopg2-binary==2.8.6
 python-dateutil==2.8.1
 python-editor==1.0.4
+python-jose==3.2.0
 six==1.14.0
 SQLAlchemy==1.3.20
 Werkzeug==1.0.1
